--- a/src/kore-cell/.classpath
+++ b/src/kore-cell/.classpath
@@ -10,9 +10,10 @@
 			<attribute name="FROM_GRADLE_MODEL" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="con" path="org.eclipse.buildship.core.gradleclasspathcontainer"/>
 	<classpathentry kind="output" path="bin"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8/"/>
+	<classpathentry kind="src" path="/kore-jadecommunicator"/>
 	<classpathentry sourcepath="C:/Users/wendt/.gradle/caches/modules-2/files-2.1/org.slf4j/slf4j-api/1.7.15/e524ba9ab1a2e31759471e7e292b698dc78e00c5/slf4j-api-1.7.15-sources.jar" kind="lib" path="C:/Users/wendt/.gradle/caches/modules-2/files-2.1/org.slf4j/slf4j-api/1.7.15/bf545a272a63c5546b43ebc44df4784c0293478e/slf4j-api-1.7.15.jar"/>
 	<classpathentry sourcepath="C:/Users/wendt/.gradle/caches/modules-2/files-2.1/ch.qos.logback/logback-core/1.1.3/a69d9a62a693f391ad19d8ac19fa85a7a60cbc7c/logback-core-1.1.3-sources.jar" kind="lib" path="C:/Users/wendt/.gradle/caches/modules-2/files-2.1/ch.qos.logback/logback-core/1.1.3/e3c02049f2dbbc764681b40094ecf0dcbc99b157/logback-core-1.1.3.jar"/>
 	<classpathentry sourcepath="C:/Users/wendt/.gradle/caches/modules-2/files-2.1/ch.qos.logback/logback-classic/1.1.3/f4915df0360e7529c61f9e78ef3a06c19238e62e/logback-classic-1.1.3-sources.jar" kind="lib" path="C:/Users/wendt/.gradle/caches/modules-2/files-2.1/ch.qos.logback/logback-classic/1.1.3/d90276fff414f06cb375f2057f6778cd63c6082f/logback-classic-1.1.3.jar"/>
