--- a/src/JadeCommunicator/build.gradle
+++ b/src/JadeCommunicator/build.gradle
@@ -50,6 +50,9 @@ dependencies {
     //Jade library
     compile files('../../../libs/jade.jar')
     
+    //GSON for representing data structures
+    compile files('../../../libs/gson-2.3.1.jar')
+    
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
