--- a/src/acona-cell-datastructures/build.gradle
+++ b/src/acona-cell-datastructures/build.gradle
@@ -31,7 +31,7 @@ repositories {
     mavenCentral()
     //mavenLocal()
     flatDir {		//If no repository is used, the flat file structure can be used here
-    	dirs '../../../libs'
+    	dirs '../../../SharedLibs/libs'
   	}
   	//mavenCentral artifactUrls:['file://${basedir}/lib']
 }
@@ -49,10 +49,10 @@ dependencies {
 	//compile project(':acona-jadecommunicator')
     
     //Jade library
-    //compile files('../../../libs/jade.jar')
+    //compile files('../../../SharedLibs/libs/jade.jar')
     
     //GSON for representing data structures
-    compile files('../../../libs/gson-2.3.1.jar')
+    compile files('../../../SharedLibs/libs/gson-2.3.1.jar')
     
     
     // Declare the dependency for your favourite test framework you want to use in your tests.
