--- a/src/acona-jadecommunicator/settings.gradle
+++ b/src/acona-jadecommunicator/settings.gradle
@@ -17,5 +17,5 @@ include 'services:webservice'
 */
 
 include ':acona-cell-datastructures'
-project(':acona-cell-datastructures').projectDir = file('C:/Projekte/14_KORE/01_KORE_Workspace/acona/src/acona-cell-datastructures')
+project(':acona-cell-datastructures').projectDir = file(../acona-cell-datastructures')
 rootProject.name = 'acona-jadecommunicator'
