--- a/src/acona-cell/build.gradle
+++ b/src/acona-cell/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     //Jade library
 	compile group: 'com.tilab.jade', name: 'jade', version: '4.4.0'
     //compile files('../../../SharedLibs/libs/jade.jar')
+	
+	//Apache Jena for RDF
+	compile 'org.apache.jena:apache-jena-libs:3.1.0'
     
     //GSON for representing data structures
 	// https://mvnrepository.com/artifact/com.google.code.gson/gson
