added methods to chunk

--- a/src/acona-cell/build.gradle
+++ b/src/acona-cell/build.gradle
@@ -76,12 +76,17 @@ dependencies {
     // TestNG is also supported by the Gradle Test task. Just change the
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
     // 'test.useTestNG()' to your build script.
-    testCompile 'junit:junit:4.12'
+    testCompile 'junit:junit:4.+'
+    //compile 'junit:junit:4.+'
 }
 
 task copyDependencies(type: Copy) {
    from configurations.compile
    into 'dependencies'
+}
+
+test {
+    exclude 'at/tuwien/ict/**'
 }
 
 //Build the jar file
