--- a/src/acona-demo-webservice/build.gradle
+++ b/src/acona-demo-webservice/build.gradle
@@ -6,24 +6,125 @@
  * user guide available at https://docs.gradle.org/3.5/userguide/java_library_plugin.html
  */
 
-// Apply the java-library plugin to add support for Java Library
-apply plugin: 'java-library'
+// Apply the java plugin to add support for Java
+apply plugin: 'java'
+apply plugin: 'maven'
+apply plugin: 'eclipse'
+
+//Set the predefined variables
+version = '0.1.0'
+group = 'at.tuwien.ict.acona.demowebservice'
+//sourceCompatibility = 1.8	//Java version
+//targetCompatibility = 1.8
+
+//Define some custom variables that can be used within the file
+def bundleSymbolicName = 'at.tuwien.ict.acona.demowebservice'
+def bundleName = 'ACONA Weather Through Webservice and State Demonstration'
+def classpathprefix = 'lib/'
+
+eclipse {
+    classpath {
+        downloadJavadoc = true
+		downloadSources = true
+    }
+}
 
 // In this section you declare where to find the dependencies of your project
 repositories {
-    // Use jcenter for resolving your dependencies.
+    // Use 'jcenter' for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+    mavenCentral()
+    //mavenLocal()
+    //flatDir {		//If no repository is used, the flat file structure can be used here
+    //	dirs '../../../SharedLibs/libs'
+  	//}
+  	//mavenCentral artifactUrls:['file://${basedir}/lib']
+	maven {
+        url "http://jade.tilab.com/maven/"
+    }
 }
 
+// In this section you declare the dependencies for your production and test code
 dependencies {
-    // This dependency is exported to consumers, that is to say found on their compile classpath.
-    api 'org.apache.commons:commons-math3:3.6.1'
+	//Loggers
+    //The production code uses the SLF4J logging API at compile time
+    compile 'org.slf4j:slf4j-api:1.7.15'
+    compile 'ch.qos.logback:logback-core:1.1.3'											//Use logback for this driver
+  	compile 'ch.qos.logback:logback-classic:1.1.3'
+    compile 'org.codehaus.janino:janino:2.7.8'	//For color
+    compile 'org.codehaus.janino:commons-compiler:2.7.8'
+    compile 'org.fusesource.jansi:jansi:1.11'
+	//compile project(':acona-jadecommunicator')
+	compile project(':acona-cell')
+	//compile project(':UserConsole')
+	
+    
+    //Jade library
+	compile group: 'com.tilab.jade', name: 'jade', version: '4.4.0'
+    //compile files('../../../SharedLibs/libs/jade.jar')
+	
+	//Apache Jena for RDF
+	compile 'org.apache.jena:apache-jena-libs:3.1.0'
+    
+    //GSON for representing data structures
+	// https://mvnrepository.com/artifact/com.google.code.gson/gson
+	compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
+    //compile files('../../../SharedLibs/libs/gson-2.3.1.jar')
+    
+    //Jersey server for REST
+   	compile group: 'org.glassfish.jersey.core', name: 'jersey-server', version: '2.7'
+    compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet-core', version: '2.7'
+    compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-jetty-http', version: '2.7'
+    compile group: 'org.glassfish.jersey.media', name: 'jersey-media-moxy', version: '2.7'
+ 	compile 'com.sun.jersey.contribs:jersey-contribs:1.19'
+ 	compile 'javax.servlet:servlet-api:2.5'
+    
+    //Jetty server
+   	compile group: 'org.eclipse.jetty.aggregate', name: 'jetty-all', version: '9.3.0.M1'
+    compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
+    
+    // Declare the dependency for your favourite test framework you want to use in your tests.
+    // TestNG is also supported by the Gradle Test task. Just change the
+    // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
+    // 'test.useTestNG()' to your build script.
+    testCompile 'junit:junit:4.+'
+    //compile 'junit:junit:4.+'
+}
 
-    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    implementation 'com.google.guava:guava:21.0'
+task copyDependencies(type: Copy) {
+   from configurations.compile
+   into 'dependencies'
+}
 
-    // Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
+test {
+    exclude 'at/tuwien/ict/**'
+}
+
+//Build the jar file
+jar {
+	//Generate a manifest file
+  	manifest { 
+	  	version = project.version.replace('-','.');		//Create a version in the manifest from the variable "version" of this file
+    	//symbolicName = bundleSymbolicName
+    	//name = "KORE Cell"
+  	}
+ }
+
+configure(install.repositories.mavenInstaller) {
+   	pom.project {
+       	groupId 'at.tuwien.ict.acona.demowebservice'
+      	artifactId 'acona-demo-webservice'
+       	version '0.1.0'
+       	inceptionYear '2017'
+       	packaging 'jar'
+       	licenses {
+           	license {
+               	name 'Eclipse Public License (Version 1.0)'
+               	url 'http://www.eclipse.org/legal/epl-v10.html'
+               	distribution 'repo'
+           	}
+       	}
+   	}
 }
 
