--- a/src/acona-demo-webservice/settings.gradle
+++ b/src/acona-demo-webservice/settings.gradle
@@ -15,4 +15,10 @@ include 'api'
 include 'services:webservice'
 */
 
+include ':acona-cell'
+project(':acona-cell').projectDir = new File('C:/Projekte/14_KORE/01_KORE_Workspace/acona/src/acona-cell')
+
+//include ':UserConsole'
+//project(':UserConsole').projectDir = new File('C:/Projekte/11_CommonUtils/commonutils/src/UserConsole')
+
 rootProject.name = 'acona-demo-webservice'
