--- a/src/acona-demo-webservice/build.gradle
+++ b/src/acona-demo-webservice/build.gradle
@@ -72,17 +72,38 @@ dependencies {
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
     //compile files('../../../SharedLibs/libs/gson-2.3.1.jar')
     
-    //Jersey server for REST
+    
+   	//Jersey server for REST
    	compile group: 'org.glassfish.jersey.core', name: 'jersey-server', version: '2.7'
     compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet-core', version: '2.7'
     compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-jetty-http', version: '2.7'
-    compile group: 'org.glassfish.jersey.media', name: 'jersey-media-moxy', version: '2.7'
- 	compile 'com.sun.jersey.contribs:jersey-contribs:1.19'
- 	compile 'javax.servlet:servlet-api:2.5'
-    
-    //Jetty server
+    compile group: 'org.glassfish.jersey.media', name: 'jersey-media-moxy', version: '2.26'
+ 	compile 'com.sun.jersey.contribs:jersey-contribs:1.19.4'
+ 	compile 'javax.servlet:servlet-api:2.7'
+   	
+   	//Jetty server
    	compile group: 'org.eclipse.jetty.aggregate', name: 'jetty-all', version: '9.3.0.M1'
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
+    
+    //Jersey client
+    compile group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '2.26'
+    compile group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '2.26'
+    
+    
+
+ 	//compile 'com.sun.jersey.contribs:jersey-contribs:1.19.4'
+ 	// https://mvnrepository.com/artifact/com.sun.jersey.contribs/jersey-contribs
+	//compile group: 'com.sun.jersey.contribs', name: 'jersey-contribs', version: '1.19.4', ext: 'pom'
+ 	// https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-servlets
+	//compile group: 'org.eclipse.jetty', name: 'jetty-servlets', version: '9.4.7.v20170914'
+ 	//compile 'javax.servlet:servlet-api:2.7'
+ 	// https://mvnrepository.com/artifact/org.glassfish/javax.servlet
+	//compile group: 'org.glassfish', name: 'javax.servlet', version: '3.2-b06'
+ 	
+    
+    //Jetty server
+   	//compile group: 'org.eclipse.jetty.aggregate', name: 'jetty-all', version: '9.3.0.M1'
+    //compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
     
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
