--- a/src/acona-evolution-demonstration/build.gradle
+++ b/src/acona-evolution-demonstration/build.gradle
@@ -72,6 +72,9 @@ dependencies {
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
     //compile files('../../../SharedLibs/libs/gson-2.3.1.jar')
     
+    // https://mvnrepository.com/artifact/jfree/jfreechart
+	compile group: 'jfree', name: 'jfreechart', version: '1.0.13'
+    
     
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
