updated to jade 4.5

--- a/src/acona-demo-webservice/build.gradle
+++ b/src/acona-demo-webservice/build.gradle
@@ -14,7 +14,7 @@ apply plugin: 'eclipse'
 //Set the predefined variables
 version = '0.1.0'
 group = 'at.tuwien.ict.acona.demowebservice'
-//sourceCompatibility = 1.8	//Java version
+sourceCompatibility = 1.8	//Java version
 //targetCompatibility = 1.8
 
 //Define some custom variables that can be used within the file
