--- a/src/acona-cell/build.gradle
+++ b/src/acona-cell/build.gradle
@@ -13,7 +13,8 @@ apply plugin: 'maven'
 apply plugin: 'eclipse'
 
 //Set the predefined variables
-version = '0.1.0'
+sourceCompatibility = 1.8
+version = '1.0.0'
 group = 'at.tuwien.ict.acona'
 //sourceCompatibility = 1.8	//Java version
 //targetCompatibility = 1.8
@@ -50,9 +51,9 @@ repositories {
 dependencies {
 	//Loggers
     //The production code uses the SLF4J logging API at compile time
-    compile 'org.slf4j:slf4j-api:1.7.15'
-    compile 'ch.qos.logback:logback-core:1.1.3'											//Use logback for this driver
-  	compile 'ch.qos.logback:logback-classic:1.1.3'
+    compile 'org.slf4j:slf4j-api:1.7.25'
+    compile 'ch.qos.logback:logback-core:1.2.3'											//Use logback for this driver
+  	compile 'ch.qos.logback:logback-classic:1.2.3'
     compile 'org.codehaus.janino:janino:2.7.8'	//For color
     compile 'org.codehaus.janino:commons-compiler:2.7.8'
     compile 'org.fusesource.jansi:jansi:1.11'
@@ -60,7 +61,7 @@ dependencies {
 	//compile project(':acona-cell-datastructures')
     
     //Jade library
-	compile group: 'com.tilab.jade', name: 'jade', version: '4.4.0'
+	compile group: 'com.tilab.jade', name: 'jade', version: '4.5.0'
     //compile files('../../../SharedLibs/libs/jade.jar')
 	
 	//Apache Jena for RDF
