--- a/src/acona-evolution-demonstration/settings.gradle
+++ b/src/acona-evolution-demonstration/settings.gradle
@@ -18,7 +18,7 @@ include 'services:webservice'
 include ':acona-cell'
 project(':acona-cell').projectDir = new File('C:/Projekte/14_KORE/01_KORE_Workspace/acona/src/acona-cell')
 
-include ':UserConsole'
-project(':UserConsole').projectDir = new File('C:/Projekte/11_CommonUtils/commonutils/src/UserConsole')
+include ':simple-user-console'
+project(':simple-user-console').projectDir = new File('../../../commonutils/src/simple-user-console/')
 
 rootProject.name = 'acona-evolution-demonstration'
