--- a/src/acona-cell/build.gradle
+++ b/src/acona-cell/build.gradle
@@ -62,7 +62,6 @@ dependencies {
     
     //Jade library
 	compile group: 'com.tilab.jade', name: 'jade', version: '4.5.0'
-    //compile files('../../../SharedLibs/libs/jade.jar')
 	
 	//Apache Jena for RDF
 	compile 'org.apache.jena:apache-jena-libs:3.1.0'
@@ -70,7 +69,12 @@ dependencies {
     //GSON for representing data structures
 	// https://mvnrepository.com/artifact/com.google.code.gson/gson
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
-    //compile files('../../../SharedLibs/libs/gson-2.3.1.jar')
+    
+    compile group: 'org.eclipse.paho', name: 'org.eclipse.paho.client.mqttv3', version: '1.2.0'
+    
+    //Scannotation for the loading of annotated classes, easy reflections manager
+    compile group: 'org.reflections', name: 'reflections', version: '0.9.11'
+    
     
     
     // Declare the dependency for your favourite test framework you want to use in your tests.
