--- a/src/acona-demo-webservice/build.gradle
+++ b/src/acona-demo-webservice/build.gradle
@@ -14,7 +14,7 @@ apply plugin: 'eclipse'
 //Set the predefined variables
 version = '0.1.0'
 group = 'at.tuwien.ict.acona.demowebservice'
-sourceCompatibility = 1.8	//Java version
+//sourceCompatibility = 1.8	//Java version
 //targetCompatibility = 1.8
 
 //Define some custom variables that can be used within the file
@@ -49,7 +49,7 @@ repositories {
 dependencies {
 	//Loggers
     //The production code uses the SLF4J logging API at compile time
-    compile 'org.slf4j:slf4j-api:1.7.15'
+    compile 'org.slf4j:slf4j-api:1.7.25'
     compile 'ch.qos.logback:logback-core:1.1.3'											//Use logback for this driver
   	compile 'ch.qos.logback:logback-classic:1.1.3'
     compile 'org.codehaus.janino:janino:2.7.8'	//For color
@@ -59,6 +59,7 @@ dependencies {
 	compile project(':acona-core')
 	//compile project(':UserConsole')
 	
+	compile group: 'org.eclipse.paho', name: 'org.eclipse.paho.client.mqttv3', version: '1.2.0'
     
     //Jade library
 	//compile group: 'com.tilab.jade', name: 'jade', version: '4.4.0'
