Added remove method to acona-core Alomst finished web service Started transforming acona-stock market evolution

--- a/src/acona-demo-webservice/build.gradle
+++ b/src/acona-demo-webservice/build.gradle
@@ -80,7 +80,9 @@ dependencies {
     compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-jetty-http', version: '2.7'
     compile group: 'org.glassfish.jersey.media', name: 'jersey-media-moxy', version: '2.26'
  	compile 'com.sun.jersey.contribs:jersey-contribs:1.19.4'
- 	compile 'javax.servlet:servlet-api:2.7'
+ 	// https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
+	compile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
+
    	
    	//Jetty server
    	compile group: 'org.eclipse.jetty.aggregate', name: 'jetty-all', version: '9.3.0.M1'
