--- a/src/acona-evolution-demonstration/build.gradle
+++ b/src/acona-evolution-demonstration/build.gradle
@@ -80,7 +80,13 @@ dependencies {
     // TestNG is also supported by the Gradle Test task. Just change the
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
     // 'test.useTestNG()' to your build script.
-    testCompile 'junit:junit:4.+'
+    //testCompile 'junit:junit:4.+'
+    testImplementation(
+            'org.junit.jupiter:junit-jupiter-api:5.1.0'
+    )
+    testRuntimeOnly(
+            'org.junit.jupiter:junit-jupiter-engine:5.1.0'
+    )
     //compile 'junit:junit:4.+'
 }
 
