--- a/src/acona-evolution-demonstration/build.gradle
+++ b/src/acona-evolution-demonstration/build.gradle
@@ -85,7 +85,8 @@ dependencies {
             'org.junit.jupiter:junit-jupiter-api:5.1.0'
     )
     testRuntimeOnly(
-            'org.junit.jupiter:junit-jupiter-engine:5.1.0'
+            'org.junit.jupiter:junit-jupiter-engine:5.1.0',
+            'org.junit.vintage:junit-vintage-engine:5.1.0'
     )
     //compile 'junit:junit:4.+'
 }
