--- a/src/acona-core/build.gradle
+++ b/src/acona-core/build.gradle
@@ -51,7 +51,9 @@ repositories {
 dependencies {
 	//Loggers
     //The production code uses the SLF4J logging API at compile time
-    compile 'org.slf4j:slf4j-api:1.7.25'
+    
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+	compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
     compile 'ch.qos.logback:logback-core:1.2.3'											//Use logback for this driver
   	compile 'ch.qos.logback:logback-classic:1.2.3'
     compile 'org.codehaus.janino:janino:2.7.8'	//For color
