Other junit version for java 10+

--- a/src/acona-core/build.gradle
+++ b/src/acona-core/build.gradle
@@ -83,8 +83,16 @@ dependencies {
     // TestNG is also supported by the Gradle Test task. Just change the
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
     // 'test.useTestNG()' to your build script.
-    testCompile 'junit:junit:4.+'
+    //testCompile 'junit:junit:4.+'
     //compile 'junit:junit:4.+'
+    testImplementation(
+            'org.junit.jupiter:junit-jupiter-api:5.1.0'
+    )
+    
+    testRuntimeOnly(
+            'org.junit.jupiter:junit-jupiter-engine:5.1.0',
+            'org.junit.vintage:junit-vintage-engine:5.1.0'
+    )
 }
 
 task copyDependencies(type: Copy) {
