--- a/src/acona-core/build.gradle
+++ b/src/acona-core/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'maven'
 apply plugin: 'eclipse'
 
 //Set the predefined variables
-sourceCompatibility = 1.8
+//sourceCompatibility = 1.8
 version = '1.0.0'
 group = 'at.tuwien.ict.acona.mq'
 //sourceCompatibility = 1.8	//Java version
